--- a/index.html
+++ b/index.html
@@ -1111,8 +1111,6 @@
                             </tbody>
                         </table>
                     </div>
-                    <!-- <div class="jumbotron jumbotron-fluid">
-                        <div class="container"> -->
                             <h2>Other stylish symbols for social media profiles:</h2>
                             <div class="table-responsive">
                                 <table class="table table-bordered table-dark">
@@ -1186,6 +1184,8 @@
                                         </tbody>
                                     </table>
                                 </div>
+                            </div>
+                        </div>    
                     <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
                     <h2>1. A Short Introduction of PUBG and PUBG Fonts</h2>
                     <p class="pspace">
