--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
                                         </tr>
                                         <tr align="center">
                                             <td><span class="symbol">⋆˙❦‧₊˚  ‧₊˚⋅</span></td>
-                                            <td><span class="symbol">꧁༒☠☠︎༒꧂</span></td>
+                                            <td><span class="symbol">꧁༒☠︎☠︎༒꧂</span></td>
                                         </tr>
                                     </tbody>
                                 </table>
