--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
         </nav>
         <h1 style="text-align: center; border-radius: 10px; font-size: 26px; background-color: #dee2e6; margin: 5px; padding: 2px;">
-            <a href="https://pubgfont.com/" style="font-family: 'Pacifico', cursive;">PUBG Name Generator with Stylish and Cool Symbols</a>
+            <a href="https://pubgfont.com/" style="font-family: 'Pacifico', cursive;">PUBG Name Generator with Stylish Symbols</a>
         </h1>
         <!-- ADDED CUSTOME STYLISH NAME CODE  -->
         <div class="container">
