--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="author" content="Dilawar Khan"/>
+        <link rel="manifest" href="manifest.json">
         <!-- FAVICON -->
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
