--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PUBG Name Generator | PUBG Name with Stylish Symbols 😍</title>
-        <meta name="description" content="pubgfont is a latest PUBG Name Generator tool that allows you to create PUBG stylish name with cool and stylish symbols" />
+        <meta name="description" content="pubgfont is a popular PUBG Name Generator tool that allows you to create stylish PUBG name with stylish and unique symbols" />
         <meta
             name="keywords"
             content="PUBG name generator, Stylish PUBG names, Cool PUBG names, Unique PUBG names, Creative PUBG names, PUBG gamer names, Customized PUBG names, PUBG name ideas, Stylish symbols for PUBG names, Free PUBG name generator, Best PUBG name generator, PUBG name creator, PUBG username generator, Online gaming names, Trending PUBG names, Unique symbols for PUBG names, Top PUBG names, PUBG name suggestions, PUBG name inspiration, Stylish PUBG username ideas, Cool symbols for PUBG names, Customized PUBG usernames, PUBG nickname generator, Creative PUBG name generator, Best PUBG clan names, PUBG squad names, Gaming username ideas, Online game names."
@@ -358,7 +358,7 @@
                     <h2 class="text-center"><strong>PUBG Name Generator Latest Version</strong></h2>
                     <p class="pspace">
                         Create customized <b>PUBG Stylish Names</b> with your favorite stylish symbols. All the names and symbols provided by this <b>PUBG Name Generator</b> tool are 100% compatible and acceptable in PUBG as we have tested
-                        them manually. We have designed and created this site specifically for PUBG players to create stylish names for their PUBG accounts. Create your customized stylish name with realtime preview experience above. Simply:
+                        them manually. Create your customized stylish name with realtime preview experience above. Simply:
                     </p>
                 </div>
             </div>
@@ -1184,10 +1184,10 @@
                     <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
                     <h2>1. A Short Introduction of PUBG and PUBG Fonts</h2>
                     <p class="pspace">
-                        Generate stylish and unique fonts for your PUBG name with our free Pubg Stylish Name Generator. Designed for both boys and girls, it's easy to use with one-click copy and paste. PUBG, created by Brendan Greene, has become incredibly popular since its 2017 release. Use our generator to make your in-game persona memorable with a fancy and stylish name. Take advantage of our platform and resources to enhance your PUBG experience.
+                        Generate stylish and unique fonts for your PUBG name with our free Pubg Stylish Name Generator. Designed for both boys and girls, it's easy to use with one-click copy and paste. PUBG, created by Brendan Greene, has become incredibly popular since its 2017 release. Use our generator to make your in-game persona memorable with a unique and stylish name. Take advantage of our platform and resources to enhance your PUBG experience. We have designed and created this site specifically for PUBG players to create stylish names for their PUBG accounts. You can also use this site to create stylish and unique name for your social media accounts like facebook, instagram, tiktok with including other social media app. <a href="https://pubgfont.com">pubgfont.com</a> is all in one platform for creating stylish name for your gaming and social media profiles.
                     </p>
                     <h2>2. How to create nicknames for PUBG account?</h2>
-                    <p class="pspace">Some people don't prefer fancy or stylish names when they play games and want to use their own name instead. However, it's not always easy to create a nickname from your PUBG name. In this guide, we will provide you with tips on how to turn your name into an appealing and stylish one for Pubg or any other platform. There are various methods to create a unique name from someone's name. For instance, "Resa" is a unique name derived from "Theresa," similar to how "Elle" comes from "Michelle." You can add prefixes or suffixes to your name to create interesting and unique combinations. For example, Re+Henry, Peter+hitter, and many more.</p>
+                    <p class="pspace">Some people do not prefer unique or stylish names when they play games and want to use their own name instead. However, it is not always easy to create a nickname from your PUBG name. In this guide, we will provide you with tips on how to turn your name into an appealing and stylish one for Pubg or any other platform. There are various methods to create a unique name from someone's name. For example, "Resa" is a unique name derived from "Theresa," similar to how "Elle" comes from "Michelle." You can add prefixes or suffixes to your name to create interesting and unique combinations. For example, Re+Henry, Peter+hitter, and many more.</p>
                     <h2>3. pubgfont - A Popular PUBG Name Generator and Stylish Font Tool</h2>
                     <p class="pspace">
                         pubgfont is a popular PUBG Name Generator tool that allows you to create stylish PUBG names. It also allows you to customize your existing name with your favorite stylish symbols. You can use this
