--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="author" content="Dilawar Khan"/>
-        <link rel="manifest" href="manifest.json">
+        <!-- <link rel="manifest" href="manifest.json"> -->
         <!-- FAVICON -->
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -294,7 +294,7 @@
                     <input style="text-align: center; background-color: #dee2e6;" type="text" class="form-control form-control-lg" id="text_output" placeholder="Name Preview" readonly />
                     <button id="text_generate" class="btn btn-lg btn-primary">Copy</button>
                     <!-- Add this code wherever you want to display the install button -->
-      <button id="installButton" class="download-button"><span>Install Now</span></button>
+      <!-- <button id="installButton" class="download-button"><span>Install Now</span></button>
       <div style="text-align: center;">
         <small class="text-muted">Installable only in updated chrome browsers.</small>
         </div> 
@@ -350,7 +350,7 @@
             // Replace this with your actual notification implementation
             alert(message);
           }
-        </script>
+        </script> -->
                 </div>
             </div>
             <div class="row">
