--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@ window.dataLayer = window.dataLayer || [];
                             </tbody>
                         </table>
                     </div>
-                            <h2>Other stylish symbols for social media profiles:</h2>
+                            <h2>Other useful stylish symbols for social media profiles:</h2>
                             <div class="table-responsive">
                                 <table class="table table-bordered table-dark">
                                     <tbody>
@@ -1142,7 +1142,7 @@ window.dataLayer = window.dataLayer || [];
                                     </tbody>
                                 </table>
                             </div>
-                                <h2>Heart sign symbols for social media profiles:</h2>
+                                <h2>Heart sign and unique symbols for social media profiles:</h2>
                                 <div class="table-responsive">
                                     <table class="table table-bordered table-dark">
                                         <tbody>
