--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@ window.dataLayer = window.dataLayer || [];
                                                 <td><span class="symbol">❥</span></td>
                                                 <td><span class="symbol">ᰔ</span></td>
                                                 <td><span class="symbol">₊˚⊹♡</span></td>
-                                                <td><span class="symbol">☾𖤓</span></td>
+                                                <td><span class="symbol">𓂀</span></td>
                                                 <td><span class="symbol">✧˖°</span></td>
                                                 <td><span class="symbol">𓇢𓆸</span></td>
                                             </tr>
