--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ window.dataLayer = window.dataLayer || [];
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-warning mt-2" style="border-radius: 10px; margin: 5px;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="https://pubgfont.com/" style="font-family: 'Pacifico', cursive;">pubgfont.com</a>
+                <a class="navbar-brand" href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">pubgfont.com</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -171,7 +171,7 @@ window.dataLayer = window.dataLayer || [];
                 </div>
             </div>
         </nav>
-        <h1 style="text-align: center; border-radius: 10px; font-size: 26px; background-color: #dee2e6; margin: 5px; padding: 2px;">
+        <h1 style="text-align: center; border-radius: 10px; font-size: 25px; background-color: #dee2e6; margin: 5px; padding: 2px;">
             <a href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">PUBG Name Generator with Stylish Symbols</a>
         </h1>
         <!-- ADDED CUSTOME STYLISH NAME CODE  -->
