--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PUBG Name Generator | PUBG Name with Stylish Symbols 😍</title>
-        <meta name="description" content="pubgfont is a popular PUBG Name Generator tool that allows you to create stylish PUBG name with stylish and unique symbols" />
+        <meta name="description" content="pubgfont is a popular and latest PUBG Name Generator tool that allows you to create stylish PUBG name with stylish and unique symbols" />
         <meta
             name="keywords"
             content="PUBG name generator, Stylish PUBG names, Cool PUBG names, Unique PUBG names, Creative PUBG names, PUBG gamer names, Customized PUBG names, PUBG name ideas, Stylish symbols for PUBG names, Free PUBG name generator, Best PUBG name generator, PUBG name creator, PUBG username generator, Online gaming names, Trending PUBG names, Unique symbols for PUBG names, Top PUBG names, PUBG name suggestions, PUBG name inspiration, Stylish PUBG username ideas, Cool symbols for PUBG names, Customized PUBG usernames, PUBG nickname generator, Creative PUBG name generator, Best PUBG clan names, PUBG squad names, Gaming username ideas, Online game names."
@@ -23,7 +23,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> -->
         <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5580564546196829"
         crossorigin="anonymous"></script>
