--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PUBG Name Generator | Create PUBG Name with Stylish Symbols 😍</title>
+        <title>PUBG Name Generator | PUBG Stylish Name with Cool Symbols 😍</title>
         <meta name="description" content="pubgfont is a popular and latest PUBG Name Generator tool that allows you to create stylish PUBG name with stylish and unique symbols" />
         <meta
             name="keywords"
@@ -142,7 +142,7 @@ window.dataLayer = window.dataLayer || [];
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-warning mt-2" style="border-radius: 10px; margin: 5px;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">pubgfont.com</a>
+                <a class="navbar-brand" href="https://pubgfont.com/">pubgfont.com</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -955,7 +955,7 @@ window.dataLayer = window.dataLayer || [];
             style="display: flex; justify-content: center; align-items: center; padding: 5px;"
             class="a2a_kit a2a_kit_size_32 a2a_default_style"
             data-a2a-url="https://pubgfont.com/"
-            data-a2a-title="PUBG Name Generator | Create PUBG Name with Stylish Symbols 😍"
+            data-a2a-title="PUBG Name Generator | PUBG Stylish Name with Cool Symbols 😍"
         >
             <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
             <a class="a2a_button_facebook"></a>
