--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ window.dataLayer = window.dataLayer || [];
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-warning mt-2" style="border-radius: 10px; margin: 5px;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="https://pubgfont.com/">pubgfont.com</a>
+                <a class="navbar-brand" href="https://pubgfont.com/">PUBGFONT.COM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -170,8 +170,8 @@ window.dataLayer = window.dataLayer || [];
                 </div>
             </div>
         </nav>
-        <h1 style="text-align: center; border-radius: 10px; font-size: 25px; background-color: #dee2e6; margin: 5px; padding: 2px;">
-            <a href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">PUBG Name Generator with Stylish Symbols</a>
+        <h1 style="text-align: center; border-radius: 10px; font-size: 26px; background-color: #dee2e6; margin: 5px; padding: 2px;">
+            <a href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">PUBG Name Generator</a>
         </h1>
         <!-- ADDED CUSTOME STYLISH NAME CODE  -->
         <div class="container">
@@ -365,7 +365,7 @@ window.dataLayer = window.dataLayer || [];
             </div>
             <div class="row">
                 <div class="col text-center">
-                    <h2 class="text-center"><strong>PUBG Name Generator Latest Version</strong></h2>
+                    <h2 class="text-center"><strong>PUBG Name Generator Latest Version 6.0</strong></h2>
                     <p class="pspace">
                         Create customized <b>PUBG Stylish Names</b> with your favorite stylish symbols. All the names and symbols provided by this <b>PUBG Name Generator</b> tool are 100% compatible and acceptable in PUBG as we have tested
                         them manually. Create your customized stylish name with realtime preview experience above. Simply:
