--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ window.dataLayer = window.dataLayer || [];
                 <div class="col text-center">
                     <h2 class="text-center"><strong>PUBG Name Generator Latest Version 6.0 (Copy/Paste) 😍🔥</strong></h2>
                     <p class="pspace">
-                        Create customized <b>PUBG Stylish Names</b> with your favorite stylish symbols. All the names and symbols provided by this <b>PUBG Name Generator</b> tool are 100% compatible and acceptable in PUBG as we have tested
+                        Generate <b>Stylish PUBG Names</b> using your favorite stylish symbols with a simple copy and paste. All the names and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG as we have tested
                         them manually. Create your customized stylish name with realtime preview experience above. Simply:
                     </p>
                 </div>
