--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ window.dataLayer = window.dataLayer || [];
                     <h2 class="text-center"><strong>PUBG Name Generator Latest Version 6.0 (Copy/Paste) 😍🔥</strong></h2>
                     <p class="pspace">
                         Generate <b>Stylish PUBG Names</b> using your favorite stylish symbols with a simple copy and paste. All the names and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG as we have tested
-                        them manually. Create your customized stylish name with realtime preview experience above. Simply:
+                        them manually. Here are some easy and simple steps to create a stylish name using the PUBG Name Generator Latest V6.0.
                     </p>
                 </div>
             </div>
@@ -380,7 +380,7 @@ window.dataLayer = window.dataLayer || [];
                 </ol>
             </div>
             <p class="pspace">
-                Follow the easy steps above to create a personalized PUBG stylish name with your favorite stylish symbol using the PUBG Name Generator latest version. We have also provided many pre-generated stylish name fonts with
+                Follow the easy steps above to create a stylish PUBG name with your favorite stylish symbol using the PUBG Name Generator latest version. We have also provided many pre-generated stylish name fonts with
                 symbols below ↓.
             </p>
         </div>
