--- a/index.html
+++ b/index.html
@@ -368,18 +368,19 @@ window.dataLayer = window.dataLayer || [];
                     <h2 class="text-center"><strong>PUBG Name Generator Latest Version 6.0 (Copy/Paste) 😍🔥</strong></h2>
                     <p class="pspace">
                         Generate <b>Stylish PUBG Names</b> using your favorite stylish symbols with a simple copy and paste. All the names and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG as we have tested
-                        them manually. Here are some easy and simple steps to create a stylish name using the PUBG Name Generator Latest V6.0.
+                        them manually. Here are some easy and simple steps to create a stylish name using the PUBG Name Generator Latest Version 6.0.
                     </p>
                 </div>
             </div>
             <div class="container">
                 <ol>
-                    <li><b>Enter Your Name</b> in the name field above.</li>
-                    <li>Select favorite <b>Left</b> and <b>Right</b> stylish symbols for your name</li>
-                    <li>Customize your name and click on <b>Copy Button</b> to copy your customized stylish name with symbols.</li>
+                    <li><b>Enter Your Name</b> in the Input Name Field Above.</li>
+                    <li>Select Favorite <b>Left</b> and <b>Right</b> Stylish Symbols for Your Name</li>
+                    <li>Customize Your Name and Click on <b>Copy Button</b> to Copy Your Customized Stylish Name with Symbols.</li>
                 </ol>
             </div>
             <p class="pspace">
+                Follow the easy steps above to create a PUBG stylish name with your favorite stylish symbol using the PUBG Name Generator latest version. We have also provided many pre-generated stylish name fonts with
                 Follow the easy steps above to create a stylish PUBG name with your favorite stylish symbol using the PUBG Name Generator latest version. We have also provided many pre-generated stylish name fonts with
                 symbols below ↓.
             </p>
@@ -388,7 +389,8 @@ window.dataLayer = window.dataLayer || [];
         <textarea
             type="text"
             class="form-control fancytext"
-            style="width: 100%; resize: none; position: fixed; bottom: 0; z-index: 99;     background-image: linear-gradient(#a5f3ef, #8e8eff); color: black;"
+            style="width: 100%; resize: none; position: fixed; bottom: 0; z-index: 99;         background: transparent;
+            backdrop-filter: blur(20px); color: black;"
             required
             name="text"
             placeholder="Enter Your Name & Scroll Down ↓"
