--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ window.dataLayer = window.dataLayer || [];
                 </ol>
             </div>
             <p class="pspace">
-                Follow the easy steps above to create a PUBG stylish name with your favorite stylish symbol using the PUBG Name Generator latest version. We have also provided many pre-generated stylish name fonts with
+                Follow the easy steps above to create a stylish PUBG name with your favorite stylish symbol using the PUBG Name Generator latest version. We have also provided many pre-generated stylish name fonts with
                 Follow the easy steps above to create a stylish PUBG name with your favorite stylish symbol using the PUBG Name Generator latest version. We have also provided many pre-generated stylish name fonts with
                 symbols below ↓.
             </p>
