--- a/index.html
+++ b/index.html
@@ -365,10 +365,10 @@ window.dataLayer = window.dataLayer || [];
             </div>
             <div class="row">
                 <div class="col text-center">
-                    <h2 class="text-center"><strong>PUBG Name Generator Latest Version 6.0 (Copy/Paste) 😍🔥</strong></h2>
+                    <h2 class="text-center"><strong>PUBG Name Generator Latest Version 6.1 (Copy/Paste) 😍🔥</strong></h2>
                     <p class="pspace">
                         Generate <b>Stylish PUBG Names</b> using your favorite stylish symbols with a simple copy and paste. All the names and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG as we have tested
-                        them manually. Here are some easy and simple steps to create a stylish name using the PUBG Name Generator Latest Version 6.0.
+                        them manually. Here are some easy and simple steps to create a stylish name using the PUBG Name Generator Latest Version 6.1.
                     </p>
                 </div>
             </div>
@@ -376,7 +376,7 @@ window.dataLayer = window.dataLayer || [];
                 <ol>
                     <li><b>Enter Your Name</b> in the Input Name Field Above.</li>
                     <li>Select Favorite <b>Left</b> and <b>Right</b> Stylish Symbols for Your Name</li>
-                    <li>Customize Your Name and Click on <b>Copy Button</b> to Copy Your Customized Stylish Name with Symbols.</li>
+                    <li>Customize Your Name and Click on <b>'Copy' Button</b> to Copy Your Customized Stylish Name with Symbols.</li>
                 </ol>
             </div>
             <p class="pspace">
@@ -982,14 +982,13 @@ window.dataLayer = window.dataLayer || [];
         <!--        Added FAQ's  -->
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h2 class="text-center">PUBG Name Generator with Symbols</h2>
-                <p>Create PUBG stylish name with your favorite stylish symbol. You just need to:</p>
+                <h2 class="text-center">PUBG Name Generator with Symbols V6.0</h2>
+                <p>Simply follow the easy steps below to create stylish PUBG name with your favorite stylish symbol using the PUBG Name Generator V6.0</p>
                 <ol style="padding: 10px;">
-                    <li>Enter your <b>Name</b> in the name field below.</li>
-                    <li>Click on your favorite <b>Stylish Symbol</b> provided in the table below to copy or to add it in the name field.</li>
-                    <li>Click on copy button to copy your <b>Stylish PUBG Name</b></li>
+                    <li>Enter Your Name in the Input Name Field Below.</li>
+                    <li>Click on Your Favorite Stylish Symbol Provided Below to Copy it.</li>
+                    <li>Click on 'Copy' Button to Copy Your Stylish PUBG Name</li>
                 </ol>
-                <p>follow the easy steps above to create stylish PUBG name with your favorite stylish symbol</p>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control text-89" placeholder="Create customized stylish name..." style="height: 40px;" id="copy_preview" />
                     <div class="input-group-append">
