--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@ window.dataLayer = window.dataLayer || [];
                             </tbody>
                         </table>
                     </div>
-                            <h2>Other useful stylish symbols for social media profiles:</h2>
+                            <h2>Useful stylish and unique symbols for social media profiles:</h2>
                             <div class="table-responsive">
                                 <table class="table table-bordered table-dark">
                                     <tbody>
@@ -1143,7 +1143,7 @@ window.dataLayer = window.dataLayer || [];
                                     </tbody>
                                 </table>
                             </div>
-                                <h2>Heart sign and unique symbols for social media profiles:</h2>
+                                <h2>Unique stylish heart symbols for social media profiles:</h2>
                                 <div class="table-responsive">
                                     <table class="table table-bordered table-dark">
                                         <tbody>
