--- a/index.html
+++ b/index.html
@@ -983,14 +983,14 @@ window.dataLayer = window.dataLayer || [];
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h2 class="text-center">PUBG Name Generator with Symbols V6.0</h2>
-                <p>Simply follow the easy steps below to create stylish PUBG name with your favorite stylish symbol using the PUBG Name Generator V6.0</p>
+                <p>Simply follow the easy steps below to create stylish PUBG name with your favorite stylish symbol using the PUBG Name Generator V6.0.</p>
                 <ol style="padding: 10px;">
                     <li>Enter Your Name in the Input Name Field Below.</li>
                     <li>Click on Your Favorite Stylish Symbol Provided Below to Copy it.</li>
                     <li>Click on 'Copy' Button to Copy Your Stylish PUBG Name</li>
                 </ol>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control text-89" placeholder="Create customized stylish name..." style="height: 40px;" id="copy_preview" />
+                    <input type="text" class="form-control text-89" placeholder="Create stylish name here..." style="height: 40px;" id="copy_preview" />
                     <div class="input-group-append">
                         <span class="input-group-text copybutton" style="cursor: pointer;" data-clipboard-action="copy" data-clipboard-target="#copy_preview">Copy</span>
                     </div>
@@ -1191,12 +1191,13 @@ window.dataLayer = window.dataLayer || [];
                                     </table>
                                 </div>    
                     <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
-                    <h2>1. A Short Introduction of PUBG and PUBG Fonts</h2>
+                    <h2>1. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                     <p class="pspace">
-                        Generate stylish and unique fonts for your PUBG name with our free Pubg Stylish Name Generator. Designed for both boys and girls, it's easy to use with one-click copy and paste. PUBG, created by Brendan Greene, has become incredibly popular since its 2017 release. Use our generator to make your in-game persona memorable with a unique and stylish name. Take advantage of our platform and resources to enhance your PUBG experience. We have designed and created this site specifically for PUBG players to create stylish names for their PUBG accounts. You can also use this site to create stylish and unique name for your social media accounts like facebook, instagram, tiktok with including other social media app. <a href="https://pubgfont.com">pubgfont.com</a> is all in one platform for creating stylish name for your gaming and social media profiles.
+                        You might know about the super engaging multiplayer battle royale game in the gaming world. This game is called Player Unknown's Battlegrounds (PUBG), and it's broken many records. An Irish man named Brendan Greene created and designed this game. To stand out as a great gamer, every player wants a special and stylish name. Everyone desires their own unique identity. You can achieve this with special weapons, clothes, skins, and most importantly, names. A lot of people play PUBG and they're searching for the perfect name for their characters.
                     </p>
-                    <h2>2. How to create nicknames for PUBG account?</h2>
-                    <p class="pspace">Some people do not prefer unique or stylish names when they play games and want to use their own name instead. However, it is not always easy to create a nickname from your PUBG name. In this guide, we will provide you with tips on how to turn your name into an appealing and stylish one for Pubg or any other platform. There are various methods to create a unique name from someone's name. For example, "Resa" is a unique name derived from "Theresa," similar to how "Elle" comes from "Michelle." You can add prefixes or suffixes to your name to create interesting and unique combinations. For example, Re+Henry, Peter+hitter, and many more.</p>
+
+                    <h2>2. What Are PUBG Fonts and the PUBG Name Generator?</h2>
+                    <p class="pspace">Having difficulty on deciding PUBG Username? Don not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool many PUBG players use to create stylish names with cool symbols. You can make unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create using this tool work perfectly in PUBG Mobile.</p>
                     <h2>3. pubgfont - A Popular PUBG Name Generator and Stylish Font Tool</h2>
                     <p class="pspace">
                         pubgfont is a popular PUBG Name Generator tool that allows you to create stylish PUBG names. It also allows you to customize your existing name with your favorite stylish symbols. You can use this
