--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@ window.dataLayer = window.dataLayer || [];
                         </tbody>
                     </table>
                 </div>
-                    <h2>PUBG Stylish Name with symbol Ideas:</h2>
+                    <h2>Some Stylish PUBG Name Ideas:</h2>
                     <div class="table-responsive">
                         <table class="table table-bordered table-dark">
                             <tbody>
@@ -1143,7 +1143,7 @@ window.dataLayer = window.dataLayer || [];
                                     </tbody>
                                 </table>
                             </div>
-                                <h2>Unique stylish heart symbols for social media profiles:</h2>
+                                <h2>Unique heart stylish symbols for social media profiles:</h2>
                                 <div class="table-responsive">
                                     <table class="table table-bordered table-dark">
                                         <tbody>
