--- a/index.html
+++ b/index.html
@@ -1198,15 +1198,15 @@ window.dataLayer = window.dataLayer || [];
 
                     <h2>2. What Are PUBG Fonts and the PUBG Name Generator?</h2>
                     <p class="pspace">Having difficulty on deciding PUBG Username? Don not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool many PUBG players use to create stylish names with cool symbols. You can make unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create using this tool work perfectly in PUBG Mobile.</p>
-                    <h2>3. pubgfont - A Popular PUBG Name Generator and Stylish Font Tool</h2>
+                    <!-- <h2>3. pubgfont - A Popular PUBG Name Generator and Stylish Font Tool</h2>
                     <p class="pspace">
                         pubgfont is a popular PUBG Name Generator tool that allows you to create stylish PUBG names. It also allows you to customize your existing name with your favorite stylish symbols. You can use this
                         tool to generate stylish names for your social media profiles including Facebook, Instagram, Twitter, TikTok, and other social media platforms with its unlimited stylish names and text fonts. pubgfont is a popular
                         PUBG name generator among PUBG players worldwide.
-                    </p>
-                    <h2>4. Why pubgfont is better than all PUBG name generators and stylish font tools?</h2>
+                    </p> -->
+                    <!-- <h2>4. Why pubgfont.com is better than other PUBG name generators and stylish font tools?</h2>
                     <p class="pspace">
-                        pubgfont is better than all other PUBG name generators and stylish font tools because it provides you with many pre-generated stylish name fonts along with stylish symbols. You can use this tool to create your
+                        pubgfont.com is better than all other PUBG name generators and stylish font tools because it provides you with many pre-generated stylish name fonts along with stylish symbols. You can use this tool to create your
                         personalized stylish name with unlimited stylish text fonts and symbols that play an important role in styling your social media and gaming profiles. It also allows you to customize your existing name with your
                         favorite stylish symbols. You can us this tool to create:</p>
                         <ul style="padding: 10px;">
@@ -1214,7 +1214,7 @@ window.dataLayer = window.dataLayer || [];
                             <li>PUBG stylish name with space</li>
                             <li>PUBG stylish name for boys</li>
                             <li>PUBG stylish name for girls</li>
-                        </ul>
+                        </ul> -->
                              <!--       Added Card -->
                     <h2>5. How to Generate a PUBG Stylish Name?</h2>
                     <div class="card">
@@ -1228,7 +1228,7 @@ window.dataLayer = window.dataLayer || [];
                         </div>
                     </div>
                     <!--  Ended Card -->
-                    <h2>6. Generate Stylish Names for Your Social Media and Gaming Profiles</h2>
+                    <!-- <h2>6. Generate Stylish Names for Your Social Media and Gaming Profiles</h2>
                     <p class="pspace">
                         pubgfont is the perfect tool to create stylish name for your social media and gaming profiles. It is a popular name generator tool that can generate stylish and unique names for your social media as well as gaming profiles. Just enter your name or text in the name field, 
                         and it will provide you with unlimited stylish names. With pubgfont, you can personalize your gaming profile with unique symbols and characters or create a name that represents your brand for your social media
@@ -1240,7 +1240,7 @@ window.dataLayer = window.dataLayer || [];
                         If you need a tool that create stylish and unique name for your social media and gaming profile then pubgfont is the perfect tool. It offers a wide range of stylish fonts and stylish symbols to generate
                         unique and cool names. Simply enter your name or text in the name field and our user-friendly name generator will provide you with many options which you can simply and copy and paste. You can easily create unique
                         names for your social media and gaming profiles with pubgfont.
-                    </p>
+                    </p> -->
                     <h2>8. How to rename or change your name in PUBG Mobile?</h2>
                     <div class="card">
                         <a href="https://pubgfont.com/"><img src="pubgrename.webp" class="card-img-bottom" alt="how to change name in pubg" /></a>
