--- a/index.html
+++ b/index.html
@@ -1198,12 +1198,6 @@ window.dataLayer = window.dataLayer || [];
 
                     <h2>2. What Are PUBG Fonts and the PUBG Name Generator?</h2>
                     <p class="pspace">Having difficulty on deciding PUBG Username? Don not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool many PUBG players use to create stylish names with cool symbols. You can make unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create using this tool work perfectly in PUBG Mobile.</p>
-                    <!-- <h2>3. pubgfont - A Popular PUBG Name Generator and Stylish Font Tool</h2>
-                    <p class="pspace">
-                        pubgfont is a popular PUBG Name Generator tool that allows you to create stylish PUBG names. It also allows you to customize your existing name with your favorite stylish symbols. You can use this
-                        tool to generate stylish names for your social media profiles including Facebook, Instagram, Twitter, TikTok, and other social media platforms with its unlimited stylish names and text fonts. pubgfont is a popular
-                        PUBG name generator among PUBG players worldwide.
-                    </p> -->
                     <!-- <h2>4. Why pubgfont.com is better than other PUBG name generators and stylish font tools?</h2>
                     <p class="pspace">
                         pubgfont.com is better than all other PUBG name generators and stylish font tools because it provides you with many pre-generated stylish name fonts along with stylish symbols. You can use this tool to create your
@@ -1216,13 +1210,12 @@ window.dataLayer = window.dataLayer || [];
                             <li>PUBG stylish name for girls</li>
                         </ul> -->
                              <!--       Added Card -->
-                    <h2>5. How to Generate a PUBG Stylish Name?</h2>
+                    <h2>4. How to Generate a PUBG Stylish Name?</h2>
                     <div class="card">
                         <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
                         <div class="card-body">
                             <p class="pspace">
-                                Generating a unique and stylish PUBG name with pubgfont is very easy. Simply enter your name in the name field below or paste text there, and our PUBG name generator will provide you with many unlimited
-                                stylish names with symbols. Once you have found the perfect name, simply copy and paste it wherever you want. Make your PUBG account look attractive and unique with our clean and user-friendly tool.
+                                Creating a special and stylish PUBG name with pubgfont is really simple. Just type your name in the box below or paste some text, and our PUBG name generator will give you lots of unique and stylish names with symbols. You can also try different versions of PUBG name generator provided by this tool. When you find the perfect name, just copy and paste it wherever you like. Enhance the look of your PUBG account with our easy to use, simple and user friendly tool,
                             </p>
                             <!--  <p class="card-text"><small class="text-muted">Some text here</small></p> -->
                         </div>
