--- a/index.html
+++ b/index.html
@@ -1198,19 +1198,18 @@ window.dataLayer = window.dataLayer || [];
 
                     <h2>2. What Are PUBG Fonts and the PUBG Name Generator?</h2>
                     <p class="pspace">Having difficulty on deciding PUBG Username? Don not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool many PUBG players use to create stylish names with cool symbols. You can make unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create using this tool work perfectly in PUBG Mobile.</p>
-                    <!-- <h2>4. Why pubgfont.com is better than other PUBG name generators and stylish font tools?</h2>
+                    
+                    <h2>3. Create Stylish PUBG Names with Symbols and Fonts at Pubgfont.com</h2>
                     <p class="pspace">
-                        pubgfont.com is better than all other PUBG name generators and stylish font tools because it provides you with many pre-generated stylish name fonts along with stylish symbols. You can use this tool to create your
-                        personalized stylish name with unlimited stylish text fonts and symbols that play an important role in styling your social media and gaming profiles. It also allows you to customize your existing name with your
-                        favorite stylish symbols. You can us this tool to create:</p>
+                        Pubgfont.com is better than other tools that make names for PUBG and fonts that look stylish. It gives you many pre-generated cool name fonts and symbols. You can use it to make your own special name with lots of different text styles and symbols. These are important if you want your social media and gaming profiles to look nice. You can also change your current name and add symbols you like. You can use this tool to make:</p>
                         <ul style="padding: 10px;">
                             <li>PUBG stylish name with symbols</li>
                             <li>PUBG stylish name with space</li>
                             <li>PUBG stylish name for boys</li>
                             <li>PUBG stylish name for girls</li>
-                        </ul> -->
+                        </ul>
                              <!--       Added Card -->
-                    <h2>4. How to Generate a PUBG Stylish Name?</h2>
+                    <h2>4. How to Generate a stylish name for PUBG?</h2>
                     <div class="card">
                         <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
                         <div class="card-body">
@@ -1221,14 +1220,15 @@ window.dataLayer = window.dataLayer || [];
                         </div>
                     </div>
                     <!--  Ended Card -->
-                    <!-- <h2>6. Generate Stylish Names for Your Social Media and Gaming Profiles</h2>
+                     <h2>6. How to generate a stylish name for social media profiles?</h2>
                     <p class="pspace">
                         pubgfont is the perfect tool to create stylish name for your social media and gaming profiles. It is a popular name generator tool that can generate stylish and unique names for your social media as well as gaming profiles. Just enter your name or text in the name field, 
                         and it will provide you with unlimited stylish names. With pubgfont, you can personalize your gaming profile with unique symbols and characters or create a name that represents your brand for your social media
                         accounts. It is easy to use and there is no limit to the stylish name and font options available there. So if you want to impress your audience and leave a lasting impression, use pubgfont to generate a name that
                         truly reflects your style and personality.
                     </p>
-                    <h2>7. Need a tool to create stylish names for social media and gaming profiles?</h2>
+                    
+                   <!-- <h2>7. Need a tool to create stylish names for social media and gaming profiles?</h2>
                     <p class="pspace">
                         If you need a tool that create stylish and unique name for your social media and gaming profile then pubgfont is the perfect tool. It offers a wide range of stylish fonts and stylish symbols to generate
                         unique and cool names. Simply enter your name or text in the name field and our user-friendly name generator will provide you with many options which you can simply and copy and paste. You can easily create unique
